# ApplicationMonitorCpp

./: .gitignore  .gitmodules  ApplicationMonitor.sln  CMakeLists.txt  CMakeSettings.json  DebugMonitor.sln  README.md
Console/: Console.cpp  Console.vcxproj  Console.vcxproj.filters
DebugSymbolManager/: Common.h  DebugSymbolManager.vcxproj  DebugSymbolManager.vcxproj.filters  ISymbolPathService.h  NtSymbolPath.cpp  NtSymbolPath.h  Settings.h  SymbolPath.vcxproj  SymbolPathService.cpp  SymbolPathService.h  SymbolPathServiceImpl.cpp  SymbolPathServiceImpl.h  nt_symbol_path.cpp  nt_symbol_path.h  pch.h  settings.h  symbol_path_service.h  symbol_path_service_impl.cpp  symbol_path_service_impl.h
Shared/: BadOwnerAccess.h  CommandResult.h  DataMember.h  EnvironmentRepository.cpp  EnvironmentRepository.h  EnvironmentRepositoryImpl.cpp  EnvironmentRepositoryImpl.h  EnvironmentService.cpp  EnvironmentService.h  EnvironmentServices.h  Export.h  FileService.cpp  FileService.h  FileServiceImpl.cpp  FileServiceImpl.h  HandleWithInvalidForEmpty.h  HandleWithNullForEmpty.h  IEnvironmentRepository.h  IEnvironmentService.h  IFileService.h  IProcess.h  IProcessService.h  NullHandle.h  Owner.h  Process.cpp  Process.h  ProcessImpl.cpp  ProcessImpl.h  ProcessIterable.cpp  ProcessIterable.h  ProcessIteratable.h  ProcessService.cpp  ProcessService.h  ProcessServiceImpl.cpp  ProcessServiceImpl.h  Shared.vcxproj  Shared.vcxproj.filters  SharedOwner.h  UniqueHandle.h  UniqueOwner.h  (+20 more)
SymbolPath/: Common.h  Settings.cpp  SettingsImpl.cpp  SettingsImpl.h  SymbolPath.vcxproj  SymbolPath.vcxproj.filters
System/: Process.cpp  Process.h  ProcessImpl.cpp  ProcessImpl.h  ProcessIteratable.h  System.vcxproj  System.vcxproj.filters  pch.h
Tests/DebugSymbolManagerTests/: Context.h  DebugSymbolManagerTests.vcxproj  DebugSymbolManagerTests.vcxproj.filters  MockObjects.h  Readme.md  SymbolPathService.cpp  TestAdapter.h  TestFixture.h  context_builder.h  expected_set_call.h  pch.h  symbol_path_service.cpp  test_context.h  test_fixture.h
Tests/SharedGoogleTests/: Common.h  EnvironmentRepository.cpp  EnvironmentService.cpp  FileService.cpp  Process.cpp  ProcessService.cpp  SharedGoogleTests.vcxproj  SharedGoogleTests.vcxproj.filters  environment_repository.cpp  file_service.cpp  pch.h  process_service.cpp  string_extensions_common.h  string_extentions.cpp  wstring_extensions.cpp
Tests/SharedTests/: Process.cpp  SharedTests.vcxproj  test.cpp
Tests/shared_google_tests/: environment_repository.cpp  gtest
console/: CMakeLists.txt  Console.vcxproj
include/shared/: bad_owner_access.h  environment_repository.h  file_service.h  future.h  invalid_handle.h  null_handle.h  process.h  process_service.h  unique_handle.h
include/symbol_manager/: nt_symbol_path.h  settings.h  symbol_manager_export.h  symbol_path_service.h
include/tasks/: task.h  task_action.h  task_action_factory.h  task_base.h  task_manager.h  task_state.h  task_status.h  tasks_export.h
proj/TaskManager/: TaskManager.vcxproj  TaskManager.vcxproj.filters
src/TaskManager/: pch.h
src/shared/: CMakeLists.txt  cpp.hint  environment_repository_impl.cpp  environment_repository_impl.h  file_service_impl.cpp  process_impl.cpp  process_impl.h  process_service_impl.cpp  process_service_impl.h  shared.vcxproj  shared.vcxproj.filters
src/symbol_manager/: CMakeLists.txt  cpp.hint  nt_symbol_path.cpp  pch.h  symbol_manager.vcxproj  symbol_manager.vcxproj.filters  symbol_path_service_impl.cpp  symbol_path_service_impl.h
src/task_manager/: task_manager.vcxproj  task_manager.vcxproj.filters
src/tasks/: CMakeLists.txt  cpp.hint  pch.h  task.cpp  task_base.cpp  task_impl.cpp  task_impl.h  task_manager.cpp  task_manager_impl.cpp  task_manager_impl.h  tasks.vcxproj  tasks.vcxproj.filters
test/DebugSymbolManagerTests/: expected_set_call.h
test/debug_symbol_manager_tests/: debug_symbol_manager_tests.vcxproj  mock_objects.h  pch.h  test_context.h
test/shared_google_tests/: CMakeLists.txt  common.h  file_service.cpp  pch.h  process_service.cpp  shared_google_tests.vcxproj  shared_google_tests.vcxproj.filters  wstring_extensions.cpp
test/symbol_manager_tests/: CMakeLists.txt  context_builder.h  expected_set_call.h  mock_objects.h  pch.h  symbol_manager_tests.vcxproj  symbol_path_service.cpp  test_adapter.h  test_context.h
test/task_tests/: CMakeLists.txt  pch.h  simple_task.h  simple_task_base.h  simple_task_state.h  task.cpp  task_manager.cpp  task_tests.cpp  task_tests.vcxproj  task_tests.vcxproj.filters
test/tasks_test/: pch.h  sample_task.cpp  sample_task.h  tasks_test.vcxproj  tasks_test.vcxproj.filters
